--- a/src/components/sections/index/Overview.astro
+++ b/src/components/sections/index/Overview.astro
@@ -1,5 +1,6 @@
 ---
 import FocusAreas from '../index/FocusAreas.astro';
+
 ---
 
 <section class="py-20 min-h-[calc(100vh-2vh)] h-auto px-4 sm:px-6 lg:px-8 bg-text-secondary/85">
@@ -11,16 +12,16 @@ import FocusAreas from '../index/FocusAreas.astro';
     >
       <p class="uppercase text-sm tracking-widest text-text-primary">Intro</p>
       <h2 class="font-display text-3xl sm:text-4xl font-bold text-black">
-        This is <span class="text-yellow-400">what</span> I do
+        This is <span class="text-yellow-500">what</span> I do
       </h2>
       <p class="font-body text-sm md:text-lg md:w-2/3 tracking-tight leading-snug text-pretty">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis sapiente ipsum dolorum dicta eaque cumque inventore molestias, beatae ea quaerat alias accusamus voluptas autem! Alias odit voluptates in totam vitae dignissimos minus eaque culpa unde tempore dolore aperiam obcaecati voluptatum aliquam corrupti, suscipit accusamus! Odit unde veniam dolorum ipsum doloribus.
-      </p>
+      I build and launch web apps from the ground up. That means writing the code, getting it deployed, and making sure it keeps running whether I’m working solo or as part of a team.
+    </p>
     </div>
     
     <FocusAreas />
-       
   </div>
+ 
 </section>
 
 <script>
