--- a/src/components/sections/index/HeroSection.astro
+++ b/src/components/sections/index/HeroSection.astro
@@ -22,10 +22,10 @@
   <div class="absolute z-20  lg:left-36 top-2/3 md:top-1/2 -translate-y-1/2 flex flex-col gap-6 max-w-md pl-4 border-l-4 border-yellow-400">
     <p class="uppercase text-sm tracking-widest text-text-primary">Full-Stack Developer</p>
     <h1 class="text-4xl sm:text-6xl text-text-primary font-display font-bold leading-tight w-[600px] text-balance">
-      I build <span class="text-yellow-400">ridiculous</span><br /> things for the web
+      I turn ideas into <br /> into working <span class="text-yellow-400">software</span>
     </h1>
     <p class="text-black  md:text-text-primary text-base sm:text-lg ">
-      <span class="text-yellow-400  font-bold">London ⇄ Granada ·</span> Indie Hacker · Cloud Hustler
+      <span class="text-yellow-400  font-bold">London ⇄ Granada ·</span> Code · Deploy · Maintain 
     </p>
   </div>
 
