--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import HeroSection from '../components/sections/index/HeroSection.astro';
 import Overview from '../components/sections/index/Overview.astro';
 import FeaturedProjectsSection from '../components/sections/index/FeaturedProjectsSection.astro';
 import Timeline from '../components/sections/index/Timeline.astro';
-import FeaturedBlogSection from '../components/sections/index/FeaturedBlogSection.astro';  // ← Nuevo
+import FeaturedBlogSection from '../components/sections/index/FeaturedBlogSection.astro';  
 import ContactCTASection from '../components/sections/index/ContactCTASection.astro';
 import Footer from '../components/Footer.astro';
 import { portfolioAPI } from '../lib/api';
@@ -12,7 +12,6 @@ import { portfolioAPI } from '../lib/api';
 const featuredProjectsResponse = await portfolioAPI.getProjectCards({ limit: 6 });
 const featuredProjects = featuredProjectsResponse.success ? featuredProjectsResponse.data : [];
 
-// Fetch latest blog post for featured section
 const latestBlogResponse = await portfolioAPI.getLatestBlogPosts(1);
 const latestBlog = latestBlogResponse.success && Array.isArray(latestBlogResponse.data) && latestBlogResponse.data.length > 0 ? latestBlogResponse.data[0] : null;
 ---
@@ -22,6 +21,6 @@ const latestBlog = latestBlogResponse.success && Array.isArray(latestBlogRespons
 	<Overview />
 	<FeaturedProjectsSection projects={featuredProjects} />
 	<Timeline />
-	<FeaturedBlogSection latestBlog={latestBlog} />  {/* ← Nueva sección */}
+	<FeaturedBlogSection latestBlog={latestBlog} />  
 	<ContactCTASection />
 </Layout>
